# interview-prep

./: README.md  pyproject.toml
notebooks/coding_questions/: blind-75-list.ipynb
notebooks/coding_questions/.ipynb_checkpoints/: blind-75-list-checkpoint.ipynb
notebooks/deep_learning/: resnet.ipynb  vision_transformer.ipynb
notebooks/deep_learning/.ipynb_checkpoints/: vision_transformer-checkpoint.ipynb
notebooks/ml_first_principles/: metrics.ipynb
notebooks/ml_first_principles/supervised_algorithms/: decision_trees.ipynb  logistic_regression.ipynb
notebooks/ml_first_principles/supervised_algorithms/.ipynb_checkpoints/: decision_trees-checkpoint.ipynb
